[package]
name = "bbox"
version = "0.11.2"
authors = ["Henning Meyer <tutmann@gmail.com>"]
edition = "2018"

description = "Managing axis aligned 3d Bounding Boxes."
repository = "https://github.com/hmeyer/bbox"
readme = "README.md"
keywords = ["boundingbox", "3d", "csg", "union", "intersection"]
license = "Apache-2.0 OR MIT"

[lib]
name = "bbox"
path = "src/lib.rs"

[dependencies]
nalgebra = { version = "0.22", features = ["alga"] }
alga = "0.9"
num-traits = "0.2"
approx = "0.3"

[badges]
travis-ci = { repository = "hmeyer/bbox", branch = "master" }
codecov = { repository = "hmeyer/bbox", branch = "master", service = "github" }
