[package]
name = "bbox"
version = "0.14.1"
authors = ["Henning Meyer <tutmann@gmail.com>"]
edition = "2021"

description = "Managing axis aligned Bounding Boxes."
repository = "https://github.com/hmeyer/bbox"
readme = "README.md"
keywords = ["boundingbox", "csg", "union", "intersection"]
license = "MIT"

[lib]
name = "bbox"
path = "src/lib.rs"

[features]
mint = ["nalgebra/mint"]

[dependencies]
approx = "0.5.0"
nalgebra = "0.31.2"
num-traits = "0.2.14"
simba = "0.7.2"
