[package]
name = "bbox"
version = "0.15.0"
authors = ["Henning Meyer <tutmann@gmail.com>"]
edition = "2024"
rust-version = "1.85"

description = "Managing axis aligned Bounding Boxes."
repository = "https://github.com/hmeyer/bbox"
readme = "README.md"
keywords = ["boundingbox", "csg", "union", "intersection"]
license = "MIT"

[lib]
name = "bbox"
path = "src/lib.rs"

[features]
mint = ["nalgebra/mint"]

[dependencies]
approx = "0.5"
nalgebra = "0.34"
num-traits = "0.2"
